# ai-draw

./: .env.example  .gitignore  .python-version  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: Dockerfile  docker-compose.yml
examples/: .env.example  SYSTEM_PROMPT.md  prompts.yaml.sample
examples/shell/: .bashrc.sample  gemini-draw.ps1.sample
src/ai_draw/: __init__.py  common.py  gemini.py  openrouter.py  replicate.py
