[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ai-draw"
dynamic = ["version"]
description = "CLI tool for batch AI image generation via Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "google-genai>=1.7",
    "replicate>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
gemini-draw = "ai_draw.gemini:main"
replicate-draw = "ai_draw.replicate:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_draw"]
